kubernetes-manifests/webhook-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: validation
  namespace: dev-vinh
spec:
  selector:
    app: validate
  ports:
  - port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation-webhook
  labels:
    app: validate
  namespace: dev-vinh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validate
  template:
    metadata:
      labels:
        app: validate
    spec:
      containers:
      - name: webhook
        image: ciphervinh/hook:5
        ports:
        - containerPort: 443
