kubernetes-manifests/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
  namespace: dev-vinh
webhooks:
  - name: validation.dev-vinh.svc
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1","v1beta1"]
    rules:
      - apiGroups: ["apps", ""]
        resources:
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
          - DELETE
    clientConfig:
      service:
        name: validation
        namespace: dev-vinh
        path: /validate/
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQrekNDQXVPZ0F3SUJBZ0lVZTJ3WjVyT2VLMTV4WWZwbFozV2NPVWpUTldNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2V6RUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdNQWxWVE1Rc3dDUVlEVlFRSERBSlZVekVMTUFrRwpBMVVFQ2d3Q1ZWTXhDekFKQmdOVkJBc01BbFZUTVNBd0hnWURWUVFEREJkMllXeHBaR0YwYVc5dUxtUmxkaTEyCmFXNW9Mbk4yWXpFV01CUUdDU3FHU0liM0RRRUpBUllIWVVCaExtTnZiVEFlRncweU5EQXpNRFV3TmpVeE1UZGEKRncweU5qRXlNalF3TmpVeE1UZGFNSHN4Q3pBSkJnTlZCQVlUQWxWVE1Rc3dDUVlEVlFRSURBSlZVekVMTUFrRwpBMVVFQnd3Q1ZW [...]
